...
            Circle(
                color = color,
                isCurrentPage = isCurrentPage
            )
        }
    }
    HorizontalPager(state = pagerState, modifier = Modifier.testTag("TutorialPager")) { page ->
        Card(
            Modifier
                .fillMaxSize(1f)
                .background(Brush.linearGradient(colorStops = colorStops1))
                .graphicsLayer {

...
                        navController.navigate(Screens.Setup.route)
                              },
                    colors = ButtonDefaults.buttonColors(Color.White),
                    shape = RoundedCornerShape(10.dp),
                    modifier = Modifier.fillMaxWidth(.85f).padding(top=80.dp).height(50.dp)
                ) {
                    Text(text = "Start", color = Color.Black, fontSize = 18.sp, fontFamily = FontFamily(Font(R.font.opensans_res)))
                }
            }
        }
    
    }
   
...
