...
                    .padding(top = 20.dp)
                    .fillMaxWidth(.9f)
                    .fillMaxHeight(.1f)
                    .clip(shape = RoundedCornerShape(10.dp))
            ) {
                Text(
                    text = "Get Started",
                    color = Color.White,
                    fontSize = 20.sp,
                    fontFamily = openSans
                )
            }
            Spacer(modifier = Modifier.weight(.1f))
...
