...
                val myIntent = Intent(
                    context,
                    QrScanner::class.java
                )
                (context as Activity).startActivityForResult(myIntent, 100)
            },
            modifier = Modifier.size(100.dp).testTag("ScanQR")) {
                Icon(
                    painterResource(id = R.drawable.scan),
                    modifier = Modifier.fillMaxSize(.9f),
                    contentDescription = "Scan QR code",
                    tint = Color.White,
                )
...
